--- a/06-publication/main_figures/Figure_XX3/Figure_XX3.Rmd
+++ b/06-publication/main_figures/Figure_XX3/Figure_XX3.Rmd
@@ -160,7 +160,7 @@ strepgroups <- malt_rs %>%
          theme_minimal(base_size = 14) +
          scale_fill_manual(values = clade_colors) +
          # theme(axis.text.x = element_blank()) +
-         theme(axis.text.x = element_text(angle = 90, hjust = 0.5),
+         theme(axis.text.x = element_blank(),
                axis.text = element_text(size = 10)) +
          # scale_y_continuous(breaks=scales::pretty_breaks(n=6)) +
          # geom_hline(yintercept = 0.75, linetype = "dotted") +
@@ -266,16 +266,68 @@ strep50
 
 ```
 
+```{r sanguinis_anginosus}
+
+aardvark <- malt_rs %>%
+  # make a column with Strep or other
+  mutate(Genus_inc = ifelse(str_detect(Species,"Streptococcus"),"Streptococcus", "NonStrep")) %>%
+  left_join(., strep_groups , by = "Species") %>%
+  # remove Species column leaving Genus column
+  mutate(Genus = replace_na(as.character(dRep), "NonStrep")) %>%
+  select(Genus, everything()) %>%
+  select(-matches("Species|dRep|Genus_inc")) %>%
+  # convert to long format
+  gather("Library_ID","Counts", 2:ncol(.)) %>%
+  group_by(Library_ID, Genus) %>%
+  # sum all Strep read counts and all Other read counts
+  summarize(Reads = sum(Counts)) %>%
+  spread(Genus, Reads) %>%
+  # convert to proportions
+  adorn_percentages() %>%
+  ungroup() %>%
+  # rearrange column order
+  select(Library_ID, NonStrep, Sanguinis, Anginosus, everything()) %>%
+  # now sum counts for columns we're not interested in 
+  mutate(OtherStrep = select(., Bovis:Salivarius) %>% rowSums()) %>%
+  # rearrange column order again and drop the unwanted columns
+  select(Library_ID, NonStrep, Sanguinis, Anginosus, OtherStrep) %>%
+  pivot_longer(!Library_ID, names_to = "Genus", values_to = "Counts") %>%
+  # order the Library ID by 
+  mutate(Library_ID = fct_relevel(Library_ID, sample_order_rs),
+         Counts = Counts + 0.0001) %>%
+         # Genus = fct_relevel(Genus, "NonStrep","OtherStrep","Sanguinis","Anginosus")) %>%
+  filter(str_detect(Genus, "Sanguinis|Anginosus")) 
+
+aardvark_plot <- aardvark%>%
+  arrange(Library_ID) %>%
+  # filter(Counts != 0) %>%
+  mutate(Library_ID = fct_drop(Library_ID)) %>%
+  ggplot(., aes(x = Library_ID, y = Counts, shape = Genus, bg = Genus)) +
+         geom_point(size = 2, color = "grey50") + # , color = "black"
+         theme_minimal(base_size = 14) +
+         scale_fill_manual(values = c("#fee090","#a50026")) +
+         scale_shape_manual(values = c(21,24)) +
+         theme(axis.text.x = element_blank(),
+               axis.text = element_text(size = 10)) +
+         scale_y_log10() +
+         ylab("Percent") +
+         ggtitle("")
+
+aardvark_plot
+
+```
+
 ```{r plot_together}
 
-strep_groups <- plot_grid(strepgroups, streponly,
-          nrow=2, labels = c("A", "B"), rel_widths = c(1, 1))
+strep_groups <- plot_grid(strepgroups, streponly, aardvark_plot,
+          nrow=3, labels = c("A", "B", "C"), rel_widths = c(1, 1))
 
+strep_groups
 
 ggsave("./06-publication/main_figures/Figure_XX3/strep_groups.pdf", plot = strep_groups,
-       device = "pdf", scale = 1, width = 8, height = 5, units = c("in"), dpi = 300)
-ggsave("./06-publication/main_figures/Figure_XX3/strep_groups.png", plot = strep_groups,
-       device = "png", scale = 1, width = 8, height = 5, units = c("in"), dpi = 300)
+       device = "pdf", scale = 1, width = 8, height = 7, units = c("in"), dpi = 300)
+# ggsave("./06-publication/main_figures/Figure_XX3/strep_groups.png", plot = strep_groups,
+#        device = "png", scale = 1, width = 8, height = 7, units = c("in"), dpi = 300)
 
 ```
 
