--- a/06-publication/main_figures/Figure_XX5/Figure_XX5.Rmd
+++ b/06-publication/main_figures/Figure_XX5/Figure_XX5.Rmd
@@ -19,13 +19,22 @@ library(mixOmics)
 library(compositions)
 library(vegan)
 library(pairwiseAdonis)
+library(variancePartition)
 library(janitor)
 library(pander)
+library(sf)
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(rgeos)
+library(maps)
 library(tidyverse)
 library(gplots)
+library(ggsignif)
 library(ggrepel)
 library(viridis)
 library(cowplot)
+library(RColorBrewer)
+library(patchwork)
 opts_chunk$set(echo=F, warning=F, message=F, dpi=150)
 ```
 
@@ -35,6 +44,37 @@ notebook itself.
 ```{r setup}
 knitr::opts_knit$set(root.dir = normalizePath("../../../"))
 ```
+
+# Site map
+```{r}
+# pull country data
+world <- ne_countries(scale = "medium", returnclass = "sf")
+
+# add coordinates to a dataframe
+smoking_sites <- data.frame(longitude = c(4.9168030, -2.9804059,-1.257,-3.7892050,-0.3765000), latitude = c(52.5519900, 43.2805735,51.752,37.7769480,39.4695270), Site = c("MID","CMB","Radcliffe","JAE","VLC"), Data = c("New","New","Published","Published","Published"))
+
+non_smoking_sites <- data.frame(longitude = c(-8.2023080,-0.8088890,-2.8622220), latitude = c(54.0068400,38.2486110,38.6963890), Site = c("Kilteasheen","ELR","IVE"), Data = c("Published","New","New"))
+
+
+# plot the map
+sampling_sites_europe <- ggplot(data = world) +
+  geom_sf(colour = "#ffffff", fill = "#bbbbbb", linetype = "dotted") +
+  #for grey map with white lines
+  geom_sf(fill = "#f7fcf5") +
+  geom_point(data = non_smoking_sites, aes(x = longitude, y = latitude, color = Data), size = 4,
+        shape = 17) +
+  geom_point(data = smoking_sites, aes(x = longitude, y = latitude, color = Data), size = 4,
+        shape = 19) +
+  coord_sf(xlim = c(-12, 20), ylim = c(35, 60), expand = FALSE) +
+  theme_void() +
+  scale_color_manual(values = c("black","grey50"))
+sampling_sites_europe
+
+ggsave("./06-publication/main_figures/Figure_XX5/sample_site_map.pdf", plot = sampling_sites_europe, device = "pdf",
+       scale = 1, width = 5, height = 5, units = c("in"), dpi = 300)
+
+```
+
 
 # MetaPhlAn3
 
@@ -397,6 +437,14 @@ Time_period_shapes <- c(Industrial = 21, Medieval = 24, Modern = 22, Extraction_
 
 ```
 
+```{r}
+mpa3_species_decontam_unfilt %>%
+  rownames_to_column("Library_ID") %>%
+  select(Library_ID) %>%
+  filter(str_detect(Library_ID, "MID"))
+  
+```
+
 ```{r pca_time_period}
 time_period <- plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Time_period","Time_period", 3) 
 time_period
@@ -417,7 +465,7 @@ seqdepth_pc12
 
 ```{r pca_gc}
 # by average GC content
-gc <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "gc_avg", "Time_period", 3, "Avg. GC content (%)")
+gc <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "gc_avg", "Time_period", 3, "")
 gc
 
 ```
@@ -427,9 +475,68 @@ gc
 rl <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
 rl
 
+ggsave("./06-publication/supplemental_figures/SXX8/read_length.pdf", plot = rl,
+       device = "pdf", scale = 1, width = 6, height = 5, units = c("in"), dpi = 300)
+
 ```
 
-```{r biplots_all_species}
+```{r}
+# select the species with strongest loadings in PC1 + and - directions
+pc1_mpa3 <- fread("./05-results.backup/mpa3_pc1_species_list.tsv") 
+
+pc1neg <- pc1_mpa3 %>%
+  filter(PC1 > 0) %>%
+  pull(Taxon)
+
+pc_species_neg <- mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+  filter(Species %in% pc1neg) %>%
+  # convert to long-format
+  pivot_longer(!Species, names_to = "Library_ID", values_to = "Counts") %>%
+  dplyr::group_by(Library_ID) %>%
+  summarize(Count_sum = sum(Counts)) %>%
+  ungroup() %>%
+  full_join(., mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+              pivot_longer(!Species, names_to = "Library_ID", values_to = "Counts") %>%
+              dplyr::group_by(Library_ID) %>%
+              summarize(Total = sum(Counts)) %>%
+              select(Library_ID, Total)) %>%
+  mutate(Percent_neg = Count_sum / Total * 100) %>%
+  select(Library_ID, Percent_neg)
+
+mpa3_all_otu.pca <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 2, logratio = 'CLR')
+
+mpa3_all_pca_values_rs_pc <- mpa3_all_otu.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID") %>%
+  left_join(., pc_species_neg, by = "Library_ID")
+
+pc1_neg_plot <- ggplot(mpa3_all_pca_values_rs_pc, aes(PC1, PC2, fill = Percent_neg, shape = Time_period)) +
+  geom_point(size = 2, color = "black") +
+     scale_fill_viridis_c(option = "C") +
+     scale_shape_manual(values = c(21, 24, 22, 23, 23)) +
+     # stat_ellipse() +
+     # xlab(paste(xaxis, " - ", exp_var_pc1)) +
+     # ylab(paste(yaxis, " - ", exp_var_pc2)) +
+     theme_minimal(base_size = 16) +
+     theme(text = element_text(size=16)) +
+     theme(legend.title = element_blank(),
+           legend.key.size = unit(2,"mm"),
+           legend.text = element_text(size = 6)) + 
+     theme(legend.position = "top") +
+     ggtitle("") + theme(plot.title = element_text(size = 10))
+pc1_neg_plot
+
+
+```
+
+```{r biplots_all_species, eval = F}
 
 mpa3_species_decontam_unfilt_all <- mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
@@ -496,7 +603,8 @@ pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_122$plot_env$neg_1
              caption = "PC2 negative loadings")
 
 ```
-```{r no_methanobrevibacter}
+
+```{r no_methanobrevibacter, eval = F}
 # remove Methanobrevibacter oralis from the species table
 mpa3_species_decontam_unfilt_no_Moralis <- mpa3_species_decontam %>%
   filter(Species != "Methanobrevibacter oralis") %>%
@@ -540,6 +648,7 @@ no_methano
 
 ```
 
+
 Check the GC content of the species w/strongest loadings in PC2+ and PC2- space
 ```{r}
 
@@ -549,13 +658,18 @@ pc2_gc <- fread("./05-results.backup/pc2_gc_avg.tsv") %>%
   # mutate(Order = c(rep(1:10)), c(rep(1:10)))
 
 # plot
-ggplot(pc2_gc, aes(x = PC2, y = Avg_GC, color = Order)) +
-  geom_point() +
+box <- ggplot(pc2_gc, aes(x = PC2, y = Avg_GC, fill = PC2)) +
+  geom_boxplot() +
+  geom_jitter(width = 0.1, color = "grey50") +
+  geom_signif(
+    comparisons = list(c("PWS", "NEG")),
+    map_signif_level = TRUE
+  ) +
   theme_minimal() +
-  scale_color_viridis_c(option = "C") +
+  scale_fill_manual(values = c("#311068", "#C83E73")) +
   xlab("PC2 direction") +
   ylab("Species avg. GC (%)")
-
+box
 
 
 rain <- ggplot(pc2_gc, aes(x = PC2, y = Avg_GC, fill = PC2)) + 
@@ -603,14 +717,22 @@ rain
 ```
 
 ```{r plot_together}
-
-beta_div <- plot_grid(time_period, mpa3_species_decontam_filtered_nocontrols_biplot_121, 
-                         gc, rain,
-          nrow=2, labels = c("A", "B","C","D"), rel_widths = c(1, 1), scale = 0.95)
+beta_div <- time_period + pc1_neg_plot + gc + box
 beta_div
 
-ggsave("./06-publication/main_figures/Figure_XX5/beta_div_all.pdf", plot = beta_div,
-       device = "pdf", scale = 1, width = 11, height = 8.5, units = c("in"), dpi = 300)
+# ggsave("./06-publication/main_figures/Figure_XX5/beta_div_all.pdf", plot = beta_div,
+#        device = "pdf", scale = 1, width = 11, height = 8.5, units = c("in"), dpi = 300)
+
+```
+
+
+```{r, eval = F}
+
+plot_grid(time_period, pc1_neg_plot, 
+                         gc, box,
+          nrow=2, labels = c("A", "B","C","D"), rel_widths = c(1, 1), scale = 0.95)
+
+
 
 ```
 
@@ -712,67 +834,103 @@ pwa_site %>%
 
 ```
 
-```{r palaeofeces_gc}
+## Canonical Correlation Analysis
 
-palaeofeces <- fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/copevo_gc_table.tsv") %>%
-  mutate(Sample_type = "palaeofeces") %>%
-  filter(str_detect(V1, "_1.gc.tsv")) %>%
-  bind_rows(fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/pub_pal_gc_list.tsv") %>%
-  mutate(Sample_type = "pub_palaeofeces")) %>%
-  bind_rows(fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/pubData_gc_list.tsv") %>%
-  mutate(Sample_type = "pub_mod")) %>%
-  bind_rows(fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/fta_gc_table.tsv") %>%
-  mutate(Sample_type = "fta_cards")) %>%
-  rename(Library = 1,
-        Avg_GC = 2) %>%
-  mutate(Library = str_replace_all(Library, ".gc.tsv", "")) %>%
-  separate(Library, into = c("folder","Library_ID"), sep = "/") %>%
-  select(-folder)
-
-palaeofeces %>% group_by(Sample_type) %>% summarize(avg_GC = mean(Avg_GC), std_gc = sd(Avg_GC))
+```{r pca_species_all}
+mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+  gather("Library_ID","Counts",2:ncol(.)) %>%
+  mutate(Counts = Counts +1) %>%
+  spread(Species,Counts) %>%
+  column_to_rownames("Library_ID")
 
 ```
 
-```{r palaeofeces_plot}
+```{r all_corrs}
+# rename variables to look nice in figures
+all_pca_values_select <- all_pca_values %>%
+  select(Library_ID,PC1, PC2, seq_len_avg, gc_avg, No_reads_total, Sanguinis, Anginosus, Time_period_n, Site_code_n) %>%
+  rename(`Seq length` = seq_len_avg,
+         GC = gc_avg,
+         `Total reads` = No_reads_total,
+         `Time period` = Time_period_n,
+         Site = Site_code_n)
 
-ggplot(palaeofeces, aes(x = Sample_type, y = Avg_GC, fill = Sample_type)) + 
-  ## add half-violin from {ggdist} package
-  ggdist::stat_halfeye(
-    ## custom bandwidth
-    adjust = .5, 
-    ## adjust height
-    width = .6, 
-    ## move geom to the right
-    justification = -.2, 
-    ## remove slab interval
-    .width = 0, 
-    point_colour = NA
-  ) + 
-  geom_boxplot(
-    width = .12, 
-    ## remove outliers
-    outlier.color = NA, ## `outlier.shape = NA` works as well
-    color = "grey30"
-  ) +
-  ## add dot plots from {ggdist} package
-  ggdist::stat_dots(
-    ## orientation to the left
-    side = "left", 
-    ## move geom to the left
-    justification = 1.1, 
-    ## adjust grouping (binning) of observations 
-    binwidth = 0.005
-  ) + 
-  ## remove white space on the left
-  coord_cartesian(xlim = c(1.2, NA)) +
-  theme_minimal(base_size = 14) +
-  # scale_fill_manual(values = Time_period_colors) +
-  theme(axis.text = element_text(size = 14)) +
-  theme(legend.position = "none") +
-  xlab("Sample type") +
-  ylab("Avg. GC (%)") +
-  theme(axis.title.x = element_text(vjust=-1.5)) +
-  theme(axis.title.y = element_text(vjust=1.9))
+form <- ~ PC1 + PC2 + `Seq length` + GC + `Total reads` + Sanguinis + Anginosus + `Time period` + Site
+C_all = canCorPairs(form, all_pca_values_select)
+plotCorrMatrix( C_all )
+
+
+```
+
+
+```{r pearson_corr_mid}
+# test for significant differences in diversity between the metadata categories
+
+pearson_all <- all_pca_values %>%
+rstatix::cor_test(., PC1, PC2, PC3, seq_len_avg, gc_avg, No_reads_total, Sanguinis, Anginosus, Time_period_n, Site_code_n, method="pearson")
+
+pearson_all
+
+pearson_all %>%
+  mutate(same = var1 == var2) %>%
+  filter(same == FALSE) %>%
+  select(-same) %>%
+  filter(p <= 0.001) %>%
+  filter(cor > 0.40 | cor < -0.40) %>%
+  distinct(statistic, .keep_all = TRUE)
+  
+```
+
+```{r}
+
+C_all %>%
+  as_data_frame(.) %>%
+  mutate(names = rownames(C_all)) %>%
+  select(names, everything()) %>%
+  pivot_longer(!names, names_to = "Corrs", values_to = "values") %>%
+  filter(values != 1) %>%
+  filter(values >= 0.4) %>%
+  distinct(values, .keep_all = TRUE)
+
+
+C_all %>%
+  as_data_frame(.) %>%
+  mutate(names = rownames(C_all)) %>%
+  select(names, everything()) %>%
+  pivot_longer(!names, names_to = "Corrs", values_to = "values") %>%
+  filter(names == "GC") %>%
+  arrange(desc(values))
+
+```
+
+
+```{r}
+# colorset <- rev(colorspace::sequential_hcl(10, palette = "BuPu"))
+
+colorset <- c("#ffffff","#e8e2ee","#d1c6dc","#baaacb","#a48fba","#8d74aa","#775b99","#604289","#492978","#311068")
+
+ pvals_all <- all_pca_values_select %>%
+  column_to_rownames("Library_ID") %>%
+  as.matrix(.) %>%
+  corrplot::cor.mtest(., method="pearson")
+
+C_all %>%
+  corrplot::corrplot(., p.mat = pvals_all$p, order = "hclust", type = "upper", col = colorset, is.corr = FALSE, cl.cex = 1.5, diag = FALSE, tl.cex = 1.7,
+                     tl.col = 'black', sig.level = c(0.001), pch.cex = 2.2, insig = 'label_sig', pch.col = 'grey20')
+
+```
+
+```{r, eval = F}
+svg(file = "./06-publication/main_figures/Figure_XX5/all_corr_plot.svg") 
+
+C_all %>%
+  corrplot::corrplot(., p.mat = pvals_all$p, order = "hclust", type = "upper", col = colorset, is.corr = FALSE, cl.cex = 1.5, diag = FALSE, tl.cex = 1.7,
+                     tl.col = 'black', sig.level = c(0.001), pch.cex = 2.2, insig = 'label_sig', pch.col = 'grey20')
+
+dev.off()
 
 ```
 
