--- a/06-publication/main_figures/Figure_5/Figure_5.Rmd
+++ b/06-publication/main_figures/Figure_5/Figure_5.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Smoking calculus Figure XX3 - Streptococcus group distributions"
+title: "Smoking calculus Figure 5 - Streptococcus group distributions"
 author: "Irina Velsko"
 date: "`r format(Sys.time(), '%b %d, %Y')`"
 output:
@@ -324,9 +324,9 @@ strep_groups <- plot_grid(strepgroups, streponly, aardvark_plot,
 
 strep_groups
 
-ggsave("./06-publication/main_figures/Figure_XX3/strep_groups.pdf", plot = strep_groups,
+ggsave("./06-publication/main_figures/Figure_5/strep_groups.pdf", plot = strep_groups,
        device = "pdf", scale = 1, width = 8, height = 7, units = c("in"), dpi = 300)
-# ggsave("./06-publication/main_figures/Figure_XX3/strep_groups.png", plot = strep_groups,
+# ggsave("./06-publication/main_figures/Figure_5/strep_groups.png", plot = strep_groups,
 #        device = "png", scale = 1, width = 8, height = 7, units = c("in"), dpi = 300)
 
 ```
