--- a/02-scripts.backup/MID_sub10M_sub75bp_numbers.Rmd
+++ b/02-scripts.backup/MID_sub10M_sub75bp_numbers.Rmd
@@ -22,7 +22,7 @@ knitr::opts_knit$set(root.dir = normalizePath(".."))
 
 
 ```{r}
-colors3 <- c("#f5767a", "#63f35e","#8dc6f7") # "#5e63f3")
+colors3 <- c("#f5767a", "#63f35e", "#8dc6f7") # "#5e63f3")
 shapes3 <- c(21, 23, 24)
 
 ```
@@ -35,10 +35,10 @@ load("./05-results.backup/Metadata_tables.RData")
 Set the sample order for plotting
 ```{r}
 sample_order <- full_metadata %>%
-  select(Library_ID, Site) %>%
+  select(Library_ID, Site_code) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  mutate(Site= fct_relevel(Site, "Jaen","VLC","Radcliffe","CMB","Middenbeemster","ELR","IVE","Kilteasheen")) %>%
-  arrange(Site) %>%
+  mutate(Site_code= fct_relevel(Site_code, "JAE","VLC","RAD","CMB","MID","ELR","IVE","KIL")) %>%
+  arrange(Site_code) %>%
   pull(Library_ID)
   
 ```
@@ -114,7 +114,7 @@ full_metadata %>%
 
 full_metadata %>%
   select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
-  filter(str_detect(Library_ID, "JAE")) %>%
+  filter(str_detect(Library_ID, "JAE|VLC")) %>%
   gather("Seq_depth", "Read_counts", 2:ncol(.)) %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp")) %>%
   ggplot(., aes(x = Library_ID, y = Read_counts, shape = Seq_depth, bg = Seq_depth)) +
@@ -208,15 +208,56 @@ full_metadata %>%
 
 ```
 
+```{r}
+full_metadata %>%
+  select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("Seq_depth", "Read_counts", 2:ncol(.)) %>%
+  filter(Seq_depth != "No_reads_75bp") %>%  
+  mutate(Library_ID= fct_relevel(Library_ID, sample_order),
+         Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human", "No_reads_10M")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_counts, shape = Seq_depth, bg = Seq_depth)) +
+    geom_point(size = 3, color = "grey50") +
+    theme_minimal() +
+    scale_fill_manual(values = colors3) +
+    scale_shape_manual(values = shapes3) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 5000000, linetype = "dotted") +
+    ylab("No. reads")
+
+full_metadata %>%
+  select(Library_ID, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("Seq_depth", "Read_counts", 2:ncol(.)) %>%
+  filter(Seq_depth != "No_reads_10M") %>%  
+  mutate(Library_ID= fct_relevel(Library_ID, sample_order),
+         Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human", "No_reads_75bp")) %>%
+  ggplot(., aes(x = Library_ID, y = Read_counts, shape = Seq_depth, bg = Seq_depth)) +
+    geom_point(size = 3, color = "grey50") +
+    theme_minimal() +
+    scale_fill_manual(values = c("#f5767a", "#8dc6f7")) +
+    scale_shape_manual(values = c(21, 24)) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 5000000, linetype = "dotted") +
+    ylab("No. reads")
+
+
+```
+
+
 Summary box plots
 ```{r seqdepth_box}
 full_metadata %>%
-  select(Library_ID, Site, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  select(Library_ID, Site_code, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   gather("Seq_depth", "Read_counts", 3:ncol(.)) %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
-  ggplot(., aes(x = Site, y = Read_counts, fill = Seq_depth)) +
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  ggplot(., aes(x = Site_code, y = Read_counts, fill = Seq_depth)) +
     geom_violin() +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
@@ -228,12 +269,12 @@ full_metadata %>%
 
 # one without modern calculus
 full_metadata %>%
-  select(Library_ID, Site, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
-  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN|JAE")) %>%
+  select(Library_ID, Site_code, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN|JAE|VLC")) %>%
   gather("Seq_depth", "Read_counts", 3:ncol(.)) %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
-  ggplot(., aes(x = Site, y = Read_counts, fill = Seq_depth)) +
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  ggplot(., aes(x = Site_code, y = Read_counts, fill = Seq_depth)) +
     geom_boxplot() +
     geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.1), size = 1) +
     theme_minimal() +
@@ -243,6 +284,65 @@ full_metadata %>%
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
     geom_hline(yintercept = 5000000, linetype = "dotted") +
    ylab("No. reads")
+
+```
+
+```{r}
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "No_reads_75bp") %>%
+  group_by(Time_period) %>%
+  wilcox_test(data = ., Read_counts ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "No_reads_75bp") %>%
+  group_by(Site_code) %>%
+  wilcox_test(data = .,Read_counts ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+```
+
+```{r}
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "No_reads_10M") %>%
+  group_by(Time_period) %>%
+  wilcox_test(data = ., Read_counts ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "No_reads_10M") %>%
+  group_by(Site_code) %>%
+  wilcox_test(data = .,Read_counts ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
 
 ```
 
@@ -321,7 +421,7 @@ full_metadata %>%
 
 full_metadata %>%
   select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
-  filter(str_detect(Library_ID, "JAE")) %>%
+  filter(str_detect(Library_ID, "JAE|VLC")) %>%
   gather("Seq_length", "Read_length", 2:ncol(.)) %>%
   mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp")) %>%
   ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
@@ -412,15 +512,53 @@ full_metadata %>%
 
 ```
 
+```{r}
+full_metadata %>%
+  select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  filter(Seq_length != "seq_len_avg_75bp") %>%  
+  mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
+    geom_point(size = 3, color = "grey50") +
+    theme_minimal() +
+    scale_fill_manual(values = colors3) +
+    scale_shape_manual(values = shapes3) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 75, linetype = "dotted")  +
+    ylab("Avg. read length (bp)")
+
+full_metadata %>%
+  select(Library_ID, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("Seq_length", "Read_length", 2:ncol(.)) %>%
+  filter(Seq_length != "seq_len_avg_10M") %>%  
+  mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
+    geom_point(size = 3, color = "grey50") +
+    theme_minimal() +
+    scale_fill_manual(values = c("#f5767a", "#8dc6f7")) +
+    scale_shape_manual(values = c(21, 24)) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 75, linetype = "dotted")  +
+    ylab("Avg. read length (bp)")
+
+```
+
+
 Summary box plots
 ```{r rl_box}
 full_metadata %>%
-  select(Library_ID, Site, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  select(Library_ID, Site_code, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   gather("Seq_length", "Read_counts", 3:ncol(.)) %>%
   mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
-         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
-  ggplot(., aes(x = Site, y = Read_counts, fill = Seq_length)) +
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  ggplot(., aes(x = Site_code, y = Read_counts, fill = Seq_length)) +
     geom_boxplot() +
     geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.1), size = 1) +
     theme_minimal() +
@@ -432,6 +570,66 @@ full_metadata %>%
     ylab("Avg. read length (bp)")
 
 ```
+
+```{r}
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "seq_len_avg_75bp") %>%
+  group_by(Time_period) %>%
+  wilcox_test(data = ., Read_length ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "seq_len_avg_75bp") %>%
+  group_by(Site_code) %>%
+  wilcox_test(data = .,Read_length ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+```
+
+```{r}
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "seq_len_avg_10M") %>%
+  group_by(Time_period) %>%
+  wilcox_test(data = ., Read_length ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "seq_len_avg_10M") %>%
+  group_by(Site_code) %>%
+  wilcox_test(data = .,Read_length ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+```
+
 
 # Average %GC 
 ```{r gc_groups}
@@ -506,7 +704,7 @@ full_metadata %>%
 
 full_metadata %>%
   select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
-  filter(str_detect(Library_ID, "JAE")) %>%
+  filter(str_detect(Library_ID, "JAE|VLC")) %>%
   gather("GC", "Read_length", 2:ncol(.)) %>%
   mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp")) %>%
   ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
@@ -597,15 +795,53 @@ full_metadata %>%
 
 ```
 
+```{r}
+full_metadata %>%
+  select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  filter(GC != "gc_avg_75bp") %>%
+  mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
+    geom_point(size = 2, color = "grey50") +
+    theme_minimal() +
+    scale_fill_manual(values = colors3) +
+    scale_shape_manual(values = shapes3) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 50, linetype = "dotted")  +
+    ylab("Avg %GC")
+
+full_metadata %>%
+  select(Library_ID, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  gather("GC", "Read_length", 2:ncol(.)) %>%
+  filter(GC != "gc_avg_10M") %>%
+  mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
+  ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
+    geom_point(size = 2, color = "grey50") +
+    theme_minimal() +
+    scale_fill_manual(values = c("#f5767a", "#8dc6f7")) +
+    scale_shape_manual(values = c(21, 24)) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+          text = element_text(size=12)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    geom_hline(yintercept = 50, linetype = "dotted")  +
+    ylab("Avg %GC")
+
+```
+
+
 Summary box plots
 ```{r gc_box}
 full_metadata %>%
-  select(Library_ID, Site, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  select(Library_ID, Site_code, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   gather("GC", "Read_counts", 3:ncol(.)) %>%
   mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp"),
-         Site = fct_relevel(Site, "Jaen","Middenbeemster","CMB","Radcliffe","Kilteasheen","ELR","IVE")) %>%
-  ggplot(., aes(x = Site, y = Read_counts, fill = GC)) +
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  ggplot(., aes(x = Site_code, y = Read_counts, fill = GC)) +
     geom_boxplot() +
     geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.25), size = 1) +
     theme_minimal() +
@@ -618,10 +854,65 @@ full_metadata %>%
 
 ```
 
-Test for significant differences between groups?
+```{r}
 
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "gc_avg_75bp") %>%
+  group_by(Time_period) %>%
+  wilcox_test(data = ., GC ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
 
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "gc_avg_75bp") %>%
+  group_by(Site_code) %>%
+  wilcox_test(data = .,GC ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
 
+```
+
+```{r}
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "gc_avg_10M") %>%
+  group_by(Time_period) %>%
+  wilcox_test(data = ., GC ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "gc_avg_10M") %>%
+  group_by(Site_code) %>%
+  wilcox_test(data = .,GC ~ Seq_depth) %>%
+  adjust_pvalue(method = "fdr") %>%
+  add_significance("p.adj")
+
+```
 
 
 
